<?xml version="1.0"?>
<package format="2">
  <name>fastlivo</name>
  <version>0.0.0</version>
  <description>The fastlivo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhouzhou@todo.todo">zhouzhou</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>livox_ros_driver</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>


  <export>

  </export>
</package>
